--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "babel-node --eval \"require('./tools/start').default().catch(err => console.error(err.stack))\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "dependencies": {
     "babel": "^6.5.2",
     "connect-mongo": "^1.3.2",
