devops tweaks & linter satisfaction

--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "babel-preset-stage-0": "^6.5.0",
     "del": "^2.2.1",
     "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "gaze": "^1.1.0",
     "json-loader": "^0.5.4",
+    "lodash.merge": "^4.5.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "path": "^0.12.7",
