--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,3 @@
-# {
-#   "parser": "babel-eslint",
-#   "plugins": [
-#   ],
-#   "env": {
-#     "browser": true,
-#     "node": true,
-#     "es6": true,
-#   },
-#   "globals": {
-#     "__DEV__": true,
-#     "__SERVER__": true
-#   },
-#   "ecmaFeatures": {
-#   },
-#   "rules": {
-#     // Strict mode
-#     "strict": [2, "never"],
-#
-#     // Code style
-#     "indent": [2, 2],
-#     "quotes": [2, "single"],
-#   }
-# }
-
 {
   "extends": "eslint-config-airbnb",
   "env": {
@@ -47,12 +22,12 @@
     "no-multi-spaces": 0
   },
   "plugins": [
-    "react", "import"
+    "import"
   ],
   "settings": {
     "import/parser": "babel-eslint",
     "import/resolve": {
-      moduleDirectory: ["node_modules", "src"]
+      "moduleDirectory": ["node_modules", "src"]
     }
   },
   "globals": {
